tests/negative/test_decl_glob_unty_bad_type.orb
bool x = 'a';

fnc main() {}